@@ -56,9 +56,9 @@ let temp1 : section =
 
 let all : section list =
     [
-    [temp1]
-//    TypeEquivalence.all
-//    Basic.all
-//    HML.all
+//    [temp1]
+    TypeEquivalence.all
+    Basic.all   // these are needed as they introduce some basic bindings
+    HML.all
     ] |> List.concat
     
